--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@connorbritain/mssql-mcp-reader",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Read-only MCP server for Microsoft SQL Server - schema discovery, profiling, and safe querying without write operations",
   "keywords": [
     "mcp",
@@ -43,11 +43,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@azure/identity": "^4.4.0",
-    "@connorbritain/mssql-mcp-reader": "^0.1.0",
-    "@modelcontextprotocol/sdk": "^1.23.0",
-    "dotenv": "^16.4.5",
-    "mssql": "^10.0.1"
+    "@connorbritain/mssql-mcp-core": "^0.1.0"
   },
   "type": "module"
 }
