--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@connorbritain/mssql-mcp-reader",
-  "version": "0.2.0",
+  "mcpName": "io.github.ConnorBritain/mssql-reader",
+  "version": "0.3.1",
   "description": "Read-only MCP server for Microsoft SQL Server - schema discovery, profiling, and safe querying without write operations",
   "keywords": [
     "mcp",
@@ -43,7 +44,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@connorbritain/mssql-mcp-core": "^0.1.1"
+    "@connorbritain/mssql-mcp-core": "^0.1.5"
   },
   "type": "module"
 }
